Fixed autofilled input fields styles are stuck between theme change (#1439)
Closes
https://github.com/SoftUni-Internal/exam-systems-issues/issues/1552
Closes
https://github.com/SoftUni-Internal/exam-systems-issues/issues/1539
Closes
https://github.com/SoftUni-Internal/exam-systems-issues/issues/1548

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/contests/contest-compete-modal/ContestCompeteModal.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/contests/contest-compete-modal/ContestCompeteModal.module.scss
@@ -31,6 +31,10 @@
     div {
       margin: spacings.$sp-24 0;
     }
+
+    .competeText {
+        color: colors.$secondary-green;
+    }
   }
 
   .buttonsWrapper {
